--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,22 +2,61 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mascotinder | Login</title>
+    <title>Login | Mascotinder</title>
+
+    <!-- Bootstrap -->
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+            crossorigin="anonymous">
+    <!-- CSS only -->
+
+    <link rel="stylesheet"
+          th:href="@{/css/login_styles.css}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <h1>Bienvenido a Mascotinder</h1>
-    <form>
-        <div>
-            <label for="username">Nombre de usuario:</label>
-            <input type="text" id="username" name="username" required>
+<div class="container h-100">
+    <div class="d-flex justify-content-center h-100">
+        <div class="user_card">
+            <div class="d-flex justify-content-center">
+                <div class="brand_logo_container">
+                    <img th:src="@{/images/mascotinder-logo.png}"  class="brand_logo" alt="Logo"   >
+                </div>
+            </div>
+            <div class="d-flex justify-content-center form_container">
+
+                <form method="post" action="LoginController" class ="needs-validation">
+                    <div>
+                        <h1>MascoTinder</h1>
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" name="usuario" class="form-control input_user" value="" placeholder="Nombre de usuario" required>
+                    </div>
+                    <div class="input-group mb-2">
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        </div>
+                        <input type="password" name="clave" class="form-control input_pass" value="" placeholder="Contraseña" required>
+                    </div>
+                    <div class="d-flex justify-content-center mt-3 login_container">
+                        <input type="submit" value="Iniciar" class="btn login_btn">
+                    </div>
+                </form>
+            </div>
+
+            <div class="mt-4">
+                <div class="d-flex justify-content-center links">
+                    <p>¿Nuevo en MascoTinder?</p>	<a href="registro" class="ml-2">Regístrate</a>
+                </div>
+            </div>
         </div>
-        <div>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <input type="submit" value="Ingresar">
-        </div>
-    </form>
+    </div>
+</div>
 </body>
 </html>
